Fixed image align

--- a/style.css
+++ b/style.css
@@ -209,12 +209,14 @@ p {
   margin-right: auto;
   transition-duration: 0.5s;
 }
-#download .iconify {
-  width: 500px !important;
-  height: 500px !important;
+#download {
+  width: 20% !important;
+  height: 20% !important;
+  display: block !important;
+  margin-left: auto !important;
 }
 .iconify:hover {
-box-shadow: 0px 0px 5px 5px #e063107a;
+  box-shadow: 0px 0px 5px 5px #e063107a;
   color: #e06410;
 }
 table{
